--- a/example-voting-app-kubernetes/pod-redis.yml
+++ b/example-voting-app-kubernetes/pod-redis.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: redis-app
+  name: redis-pod
   labels:
-    name: redis-app
+    name: redis-pod
     app: voting-app
 
 spec:
