--- a/example-voting-app-kubernetes/pod-result.yml
+++ b/example-voting-app-kubernetes/pod-result.yml
@@ -1,14 +1,14 @@
-appVersion: v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: result-pod
-  lables:
+  labels:
     name: result-pod
     app: voting-app
 
-specs:
+spec:
   containers:
-    -name: result-pod
-     image: dockersamples/examplevotingapp_result
-     ports:
-     - containerPort: 80
+    - name: result-pod
+      image: dockersamples/examplevotingapp_result
+      ports:
+      - containerPort: 80
